[gd_scene load_steps=6 format=3 uid="uid://bpwl22q3ccke5"]

[ext_resource type="Theme" uid="uid://c3usv1irpubfp" path="res://theme/theme2.tres" id="1_hdmo1"]
[ext_resource type="Script" uid="uid://7d2h0pvbafar" path="res://pause_menu.gd" id="1_nwcfo"]
[ext_resource type="Texture2D" uid="uid://da8moeshvudgb" path="res://testures/Legacy-Fantasy - High Forest 2.3/HUD/Base-01.png" id="2_p81d2"]
[ext_resource type="Theme" uid="uid://l2vc7oc1ypof" path="res://theme/theme1.tres" id="3_2nc7s"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d3xb4"]
atlas = ExtResource("2_p81d2")
region = Rect2(0, 0, 64, 64)

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_nwcfo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackDrop" type="ColorRect" parent="Control"]
modulate = Color(0, 0, 0, 0.45)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Center" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="Control/Center"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Control/Center/Panel"]
layout_mode = 2
texture = SubResource("AtlasTexture_d3xb4")

[node name="MarginContainer" type="MarginContainer" parent="Control/Center/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Center/Panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Center/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_2nc7s")
text = "PAUSA"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Control/Center/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Center/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_constants/separation = 28

[node name="Master" type="Label" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_hdmo1")
text = "Master"
horizontal_alignment = 1

[node name="Music" type="Label" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_hdmo1")
text = "Musica"
horizontal_alignment = 1

[node name="SFX" type="Label" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_hdmo1")
text = "SFX"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/separation = 23

[node name="Master" type="HSlider" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_bottom = NodePath("../Music")
max_value = 1.0
step = 0.05

[node name="Music" type="HSlider" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Master")
focus_neighbor_bottom = NodePath("../SFX")
max_value = 1.0
step = 0.05

[node name="SFX" type="HSlider" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Music")
focus_neighbor_bottom = NodePath("../../../HBoxContainer/ResumeBtn")
max_value = 1.0
step = 0.05

[node name="HSeparator2" type="HSeparator" parent="Control/Center/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Center/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResumeBtn" type="Button" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../MainMenuBtn")
focus_neighbor_top = NodePath("../../HBoxContainer2/VBoxContainer2/SFX")
focus_neighbor_right = NodePath("../MainMenuBtn")
theme = ExtResource("3_2nc7s")
text = " Riprendi "

[node name="MainMenuBtn" type="Button" parent="Control/Center/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../ResumeBtn")
focus_neighbor_top = NodePath("../../HBoxContainer2/VBoxContainer2/SFX")
focus_neighbor_right = NodePath("../ResumeBtn")
theme = ExtResource("3_2nc7s")
text = " Torna al men√π principale "
